# quality-pulse

./: .env.example  .gitignore  DESIGN.md  GEMINI.md  GUIDE_REAL_DB_MIGRATION.md  OPERATIONS.md  README.md  SECURITY_PATCH_LOG.md  docker-compose.prod.yml  docker-compose.yml  fix_lint.sh  init-letsencrypt.sh  mock_backend.py  patch_header_type.py  patch_header_type2.py  patch_layout.py  patch_nav.py  test_dockerfile.sh  test_theme.js  test_theme.py  test_theme_bug.py  test_theme_bug2.py  test_theme_error.js  test_theme_error.py  test_theme_screen.py  verify_cuj.py  verify_security.py
.github/workflows/: deploy.yml
.jules/: bolt.md  palette.md  sentinel.md
backend/: Dockerfile  README.md  main.py  pyproject.toml  seed_admin.py  seed_data.py  seed_db.py  test_models.py  test_script.py
backend/alembic/: env.py
backend/api/: deps.py  health.py  router.py
backend/core/: config.py  scheduler.py
backend/crud/: announcement.py  crawl_log.py  issue.py  workspace.py
backend/db/: database.py
backend/models/: __init__.py  announcement.py  (+3 more)
crawler/: Dockerfile  benchmark.py  main.py  pyproject.toml  requirements.txt  scraper.py  test_newsapi_track.py  test_pipeline.py  test_raw.py  test_two_track.py  triage.py  unified_pipeline.py  worker.py
crawler/core/: config.py  dedup.py  targets.py  utils.py
crawler/scrapers/: cpsc_api_fetcher.py  cpsc_scraper.py  gdelt_fetcher.py  generic_scraper.py  newsapi_fetcher.py  reddit_fetcher.py
frontend/: Dockerfile  Dockerfile.test  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
nginx/: Dockerfile  nginx.conf
(+104 files in other folders)
